# game

./: .gitmodules  CMakeLists.txt  README.md
mods/core/assets/shaders/: vertex.glsl
src/: CMakeLists.txt  main.cpp
src/assets/: CMakeLists.txt  assets.cpp  assets.hpp  file.cpp  file.hpp  shaders.cpp  shaders.hpp
src/rendering/: CMakeLists.txt  camera.cpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
